--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -35,11 +35,11 @@ jobs:
       # Build the Docker image and tag it with the commit SHA
 
     # Optional: Push the image to a Docker registry (e.g., Docker Hub, GitHub Container Registry)
-    - name: Push Docker Image
-      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-      run: |
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker tag flask-app:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/flask-app:${{ github.sha }}
-        docker push ${{ secrets.DOCKER_USERNAME }}/flask-app:${{ github.sha }}
+    # - name: Push Docker Image
+    #   if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    #   run: |
+    #     echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    #     docker tag flask-app:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/flask-app:${{ github.sha }}
+    #     docker push ${{ secrets.DOCKER_USERNAME }}/flask-app:${{ github.sha }}
       # Log in to the Docker registry and push the image
       # Make sure to set DOCKER_USERNAME and DOCKER_PASSWORD as secrets in your GitHub repository settings
