--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       # Run unit tests
 
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-app:${{ github.sha }} .
+      run: docker build -t flask-app:${{ github.sha }} .
       # Build the Docker image and tag it with the commit SHA and your Docker username
 
     - name: Log in to Docker Hub and push image
