--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: flask-app
-        image: <your-docker-username>/flask-app:latest
+        image: python:3.10-alpine
         ports:
         - containerPort: 5000
